# Merged-Verifier

./: .env.example  .gitignore  README.md  ecosystem.config.js  pyproject.toml
bot/: __init__.py  app.py  bootstrap.py  launcher.py  main.py
bot/cogs/: admin.py  verification.py
bot/config/: env.py  profiles.py  settings.py
bot/core/: bot_base.py  discord_client.py  store.py  views.py
bot/core/i18n/: __init__.py  formatter.py  locale.py  translator.py
bot/core/persistence/: db.py
bot/core/roles/: __init__.py  assigner.py
bot/core/sessions/: __init__.py  models.py  restore.py  store.py
bot/core/verification/: __init__.py  finalizer.py  flow.py  steps.py
bot/i18n/: SCHEMA.md  __init__.py  bg.json  cs.json  da.json  de.json  el.json  en.json  es.json  fi.json  fr.json  hr.json  hu.json  it.json  lt.json  nl.json  no.json  pl.json  pt.json  ro.json  ru.json  sv.json  tr.json  uk.json
bot/legacy_profiles/: __init__.py
bot/legacy_profiles/stfc_verifier/: __init__.py  bot_impl.py
bot/legacy_profiles/stfc_verifier_alliance/: __init__.py  bot_impl.py  stfc_scraper.py
bot/profiles/: __init__.py  base.py
docs/: ARCHITECTURE.md
migrations/legacy_import/: README.txt
migrations/shared/: 001_init_shared.sql
scripts/: migrate_from_stfc_verifier.py  migrate_from_stfc_verifier_alliance.py  migrate_from_veil_security.py
tests/integration/: test_session_store.py
tests/migrations/: test_migrations_apply.py
tests/unit/: test_launcher.py  test_locale.py  test_profiles.py  test_settings.py  test_support_message.py  test_translator.py
(+15 files in other folders)
