[project]
name = "verifier"
version = "0.1.0"
description = "Discord verifier bot with profile-driven behavior."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "discord.py",
  "python-dotenv",
  "beautifulsoup4",
  "requests",
  "opencv-python-headless",
  "numpy",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
dtb-verifier = "bot.main:main"

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.setuptools.package-data]
"bot.i18n" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
